--- a/porfolio.html
+++ b/porfolio.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <title>The more you know.</title>
     <link rel="stylesheet" type"text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type"text/css" href="css/styles.css">
   </head>
-  <header>
-    Zachary Neumann
-  </header>
   <body>
-    <li>
-      <span>
-        <a href="#">See my portfolio</a>
-      </span>
-    </li>
-  </body>
-  <footer>
-    <span>See my other <a href=#>pages</a></span>
-  </footer>
+    <div id="wrap">
+      <div class="container">
+        <div class="col-xs-8" id="header">
+          <h2>Zachary Neumann</h2>
+          <h4>The more you know.</h4>
+        </div>
+        <div id="main">
+          <li>
+            <span>
+              <a href="#">See my portfolio</a>
+            </span>
+          </li>
+        </div>
+        <div id"sidebar">
+          <ul>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nosstrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </li>
+          </ul>
+        </div>
+        <div id"footer">
+          <span>See my other <a href=#>pages</a></span>
+        </div>
+      </div>
+    </body>
+  </div>
 </html>
