This commit will add content to my foundational webpage. There is some small edits to the .css file here and the addition of links to three of my favorite projects I've done in the last 3 months.

--- a/porfolio.html
+++ b/porfolio.html
@@ -23,28 +23,33 @@
         </div>
         <div id="main">
           <div>
-            <h4>Header</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <h4>Header</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <h4>Header</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <h4>Header</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h4>Wikipedia Mock up</h4>
+            <p>This code showcases a little bit of .html and some .css stylesheets that incorporate a bit of bootstrap to make them look and feel nice. Visit my <a href="https://github.com/akrizae/Wikipedia" target="_blank">Mock Wikipedia Page</a> at that link!</p>
+            <h4>Zachary and Tim's First Webpage</h4>
+            <p>This code was my first webpage at Epicodus. We learned how to write a README file using dillinger and learned/used a small bit of css to style the page. Go visit <a href="https://github.com/akrizae/zt-first-webpage" target="_blank">Zachary and Tim's first webpage</a>!</p>
+            <h4>Akrizae</h4>
+            <p>I also like to create music. This is my <a href="https://soundcloud.com/akrizae" target="_blank">Soundcloud</a>, bookmark it!</p>
+            <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/276375923&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
           </div>
         </div>
         <div id="sidebar">
           <div>
+            <div class="image">
+              <center><img src="images/bear.png" width="150px"></center>
+            </div>
+            <p>My name is Zachary Neumann. I like to create content on the web. The internet came out over a decade ago when I created this portfolio. I am 24 years old and am a very ambitious and intuitive minded gentelman. Let's change the world together.</p>
+            <h6>Visit my projects here:</h6>
             <ul>
-              <li><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nosstrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</span>
+              <li><span><a href="https://github.com/akrizae/Wikipedia" target="_blank">Wikipedia Mock Up</a></span>
               </li>
-              <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              <li><span><a href="https://github.com/akrizae/zt-first-webpage" target="_blank">Zachary and Tim's first webpage</a></span>
               </li>
+              <li><span><a href="https://soundcloud.com/akrizae" target="_blank">My music</a></span></li>
             </ul>
           </div>
         </div>
         <div id="footer">
-          <span>See my other <a href=#>pages</a></span>
+          <img src="images/footer.jpg">
         </div>
       </div>
     </body>
