This commit will change the name of porfolio.html to index.html and adds an about.html and a contact.html

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
           </div>
           <div id="nav">
             <ul class="nav nav-tabs">
-              <li role="presentation" class="active"><a href="#">Home</a></li>
-              <li role="presentation"><a href="#">Profile</a></li>
-              <li role="presentation"><a href="#">Messages</a></li>
+              <li role="presentation" class="active"><a href="file:///Users/Xachary/code/epicodus/portfolio/index.html">Home</a></li>
+              <li role="presentation"><a href="file:///Users/Xachary/code/epicodus/portfolio/about.html">About Me</a></li>
+              <li role="presentation"><a href="file:///Users/Xachary/code/epicodus/portfolio/contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
