--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
         </div>
         <div id="footer">
-          <img src="images/footer.jpg">
+          <img src="images/footer.jpg" width="800px">
         </div>
       </div>
     </body>
