--- a/contact.html
+++ b/contact.html
@@ -6,5 +6,47 @@
     <link rel="stylesheet" type"text/css" href="css/styles.css">
   </head>
   <body>
-  </body>
+    <div id="wrap">
+      <div class="container-fluid">
+        <div id="header">
+          <div id="title">
+            <h2>Zachary Neumann</h2>
+            <h4>The more you know.</h4>
+          </div>
+          <div id="nav">
+            <ul class="nav nav-tabs">
+              <li role="presentation" class="active"><a href="file:///Users/Xachary/code/epicodus/portfolio/index.html">Home</a></li>
+              <li role="presentation"><a href="file:///Users/Xachary/code/epicodus/portfolio/about.html">About Me</a></li>
+              <li role="presentation"><a href="file:///Users/Xachary/code/epicodus/portfolio/contact.html">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+        <div id="main">
+          <div>
+            <h4>Contact</h4>
+            <p>Please contact me at xacharyrobert@gmail.com for inquires.</p>
+            </div>
+        </div>
+        <div id="sidebar">
+          <div>
+            <div class="image">
+              <center><img src="images/bear.png" width="150px"></center>
+            </div>
+            <p>My name is Zachary Neumann. I like to create content on the web. The internet came out over a decade ago when I created this portfolio. I am 24 years old and am a very ambitious and intuitive minded gentelman. Let's change the world together.</p>
+            <h6>Visit my projects here:</h6>
+            <ul>
+              <li><span><a href="https://github.com/akrizae/Wikipedia" target="_blank">Wikipedia Mock Up</a></span>
+              </li>
+              <li><span><a href="https://github.com/akrizae/zt-first-webpage" target="_blank">Zachary and Tim's first webpage</a></span>
+              </li>
+              <li><span><a href="https://soundcloud.com/akrizae" target="_blank">My music</a></span></li>
+            </ul>
+          </div>
+        </div>
+        <div id="footer">
+          <img src="images/footer.jpg" width="800px">
+        </div>
+      </div>
+    </body>
+  </div>
 </html>
