--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
             <div class="image">
               <center><img src="images/bear.png" width="150px"></center>
             </div>
-            <p>My name is Zachary Neumann. I like to create content on the web. The internet came out over a decade ago when I created this portfolio. I am 24 years old and am a very ambitious and intuitive minded gentelman. Let's change the world together.</p>
+            <p>My name is Zachary Neumann. I like to create content on the web. The internet came out a quarter of a century when I created this portfolio. I am 24 years old and am a very ambitious and intuitive minded gentelman. Let's change the world together.</p>
             <h6>Visit my projects here:</h6>
             <ul>
               <li><span><a href="https://github.com/akrizae/Wikipedia" target="_blank">Wikipedia Mock Up</a></span>
