--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <title>The more you know.</title>
-    <link rel="stylesheet" type"text/css" href="css/bootstrap.css">
-    <link rel="stylesheet" type"text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
     <div id="wrap">
